# CMakeCatchOpenMP

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  mjcSetupMSVCRuntime.cmake  mjcSetupTesting.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  cpp11Example.cpp  forLoopCalculatingPi.cpp  forLoopReductionOnSum.cpp  helloWorldBasic.cpp  helloWorldImproved.cpp  introducingLocks.cpp  introducingTasks.cpp  mjcMyFirstApp.cpp
Code/Lib/: CMakeLists.txt  mjcBasicTypes.cpp  mjcBasicTypes.h  mjcException.cpp  mjcException.h  mjcExceptionMacro.h  mjcMyFunctions.cpp  mjcMyFunctions.h  mjcWin32ExportHeader.h
Testing/: CMakeLists.txt  mjcBasicTest.cpp  mjcCatchMain.cpp  mjcCatchMain.h  mjcCommandLineArgsTest.cpp
